# mdsgene

./: .gitignore  README.md  document_processor.py  excel_mapping_app.py  excel_writer.py  gemini_information_retrieval.ipynb  main.py  mapping_item.py  ollama_client.py  pdf_text_extractor.py  pyproject.toml  rag_query_engine.py  readme-vm.md
ai/: cache_manager.py  data_query.py  data_uploader.py  document_loader.py  document_processor.py  document_querier.py  excel_mapping_app.py  excel_writer.py  mapping_item.py  pdf_text_extractor.py  utils.py
ai/agents/: base_agent.py  example_workflow.py  patient_identifiers_agent.py  publication_details_agent.py  questions_processing_agent.py  test_excel_mapping_app.py  test_extract_patient_identifiers.py  test_extract_publication_details.py  test_faiss.py  (+3 more)
cache/: pdf_uri_cache.json  pmid_cache.json
gemini-excel/: excel_mapping_app.py  excel_writer.py  pmid_extractor.py  requirements.txt
mdsgene/: ai_processor_client.py  ai_processor_service.py  api.py  cache_manager.py  cache_utils.py  custom_processors.py  document_processor.py  excel_mapping_app.py  excel_writer.py  gemini_processor.py  logging_config.py  mapping_item.py  patient_identifier_filter.py  pdf_text_extractor.py  pdf_uri_cache_manager.py  pdf_uri_utils.py  pmid_extractor.py  processor.py  vector_store_client.py  vector_store_service.py
qc/: config.py
src/: api.py  cache_manager.py  excel_mapping_app.py  excel_writer.py  gemini_processor.py  main.py  mapping_item.py
static_site/: package.json
vm/: Dockerfile  custom_paperqa_server.py  mapping_item.py
(+71 files in other folders)
