[project]
name = "mdsgene"
version = "0.1.0"
authors = [
    {name = "Gleb Pankov"},
    {name = "Harut Madoev"}
]
description = "MDSGene Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "paper-qa>=5.11.1",
    "uvicorn>=0.34.0",
]
